# Rose-Lang

./: .gitignore  Build.hs  Cache.hs  CmdLine.hs  Color.hs  LICENSE  Main.hs  Output.hs  Parser.hs  Pretty.hs  README.md  SymbolTable.hs  TODO.txt  Threading.hs  Utils.hs  Validation.hs  Warnings.hs  impl-dtls.txt  project.cabal  rose-lang.cabal  thorn.cabal
Analyzer/: Analysis.hs  Analyzer.hs  Checker.hs  Error.hs  Prims.hs  State.hs  SymbolTable.hs  Typing.hs
Benchmarks/: Build.hs  Main.hs
Builder/: Builder.hs  CmdLine.hs  IO.hs  Output.hs  State.hs
CmdLine/: Flags.hs  Warnings.hs
Common/: Item.hs  SrcPos.hs  Typing.hs  Var.hs
Common/Typing/: Constraint.hs  Type.hs
Data/: List.th  Maybe.th  Tree.th
Parser/: Data.hs  Error.hs  Imports.hs  Keywords.hs  LangDef.hs  Lexer.x  Parser.hs  Parser.y  Pragmas.hs  Pretty.hs  grammar.ebnf
Parser/Components/: Datatypes.hs  Functions.hs  Identifiers.hs  Imports.hs  Patterns.hs  Pragmas.hs  Specifers.hs  Specifiers.hs  Statements.hs  Terms.hs  Traits.hs  Types.hs
Parser/Components/Internal/: Item.hs  LangDef.hs
Parser/Components/Terms/: Literals.hs
Parser/Components/Terms/Literals/: Numeric.hs
Rose-Build/Std/Bit/: Abstract-Syntax-Tree.txt  Symbol-Table.txt
Rose-Build/Std/Compare/: Abstract-Syntax-Tree.txt  Symbol-Table.txt
Rose-Build/Std/Data/Tree/: Abstract-Syntax-Tree.txt  Symbol-Table.txt
Rose-Build/Std/Hash/: Abstract-Syntax-Tree.txt  Symbol-Table.txt
Rose-Build/Std/Maybe/: Abstract-Syntax-Tree.txt  Symbol-Table.txt
Rose-Build/Std/Memory/: Abstract-Syntax-Tree.txt  Symbol-Table.txt
Semantics/: Analysis.hs  Error.hs  SymbolTable.hs  Visitor.hs
Std/: Alternative.th  Array.th  Bit.th  Compare.th  Default.th  Function.th  Hash.th  IO.th  Lib.th  Logic.th  Maybe.th  Memory.th  Prelude.th  Pretty.th  Resource.th
Std/Control/: Alternative.th  Threading.th
Std/Data/: Array.th  Bit.th  Compare.th  Complex.th  Default.th  List.th  Maybe.th  Num.th  String.th  Tree.th
Std/IO/: File.th  Handle.th  Input.th  Output.th
Std/Lib/: Parse-Tree.txt
Std/Lib/Std/Pretty/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/Std/IO/Output/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/Std/IO/Output/Std/IO/Handle/: Parse-Tree.txt  Symbol-Table.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/Std/IO/Output/Std/IO/Handle/Std/IO/Input/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/Std/IO/Output/Std/IO/Handle/Std/IO/Input/Std/IO/File/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/Std/IO/Output/Std/IO/Handle/Std/IO/Input/Std/IO/File/Std/IO/Output/Std/Data/Tree/: Parse-Tree.txt
Std/Lib/Std/Pretty/Std/Function/Std/Data/Default/Std/Low/Resource/Std/Low/Memory/Std/IO/Std/IO/Output/Std/IO/Handle/Std/IO/Input/Std/IO/File/Std/IO/Output/Std/Data/Tree/Std/Data/Compare/: Parse-Tree.txt
Std/Low/: Memory.th  Resource.th
Std/Math/: Complex.th
SymbolTable/: Attrs.hs  SymbolData.hs  SymbolMap.hs  SymbolTable.hs  Trie.hs
Typing/: Checker.hs  Rules.hs  Traits.hs  Types.hs
clib/: string.h
docs/: 0.0 Introduction.md
docs/1.0 Getting Started/: 1.1 Hello, World!.md
docs/2.0 Functions/: 2.1 Identifiers.md
intrinsics/: string_t.h
lib/Control/Monad/Trans/: StateReader.hs
src/: AST.hs  Analysis.hs  Build.hs  Builder.hs  Cmd.hs  Color.hs  Compiler.hs  Main.hs  Parser.hs  Pretty.hs  Repl.hs  SymbolTable.hs  Thorn.hs  Utils.hs
src/AST/: Ctor.hs  Expr.hs  Literal.hs  Pattern.hs  Stmt.hs  Value.hs
src/Analysis/: Analyzer.hs  Error.hs  Gather.hs  Table.hs  Validator.hs
src/Analyzer/: Checker.hs  Error.hs  SymbolTable.hs
src/Back/: Base.hs  ToLLVM.hs
src/Builder/: Base.hs  CmdLine.hs  IO.hs  Internal.hs  Output.hs  State.hs
src/Builder/CmdLine/: Flags.hs  Internal.hs  Warnings.hs
src/Cmd/: Flags.hs  Options.hs  Warnings.hs
src/CodeGen/LLVM/: Base.hs  ToLLVM.hs
src/Common/: Module.hs  Specifiers.hs  SrcPos.hs  Typing.hs  Var.hs
src/Common/Typing/: Constraint.hs  Kind.hs  Type.hs
src/Data/: DepGraph.hs  Table.hs  Trie.hs  VarMap.hs
src/Data/Table/: Datatype.hs  Global.hs  Scoped.hs  Trait.hs
src/Front/: Parser.hs
src/Front/Parser/: Data.hs  Imports.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  Token.hs
src/Middle/: Analyzer.hs  SymbolTable.hs  Table.hs
src/Middle/Analyzer/: Checker.hs  Error.hs  Internal.hs  State.hs  SymbolTable.hs  Table.hs  Validator.hs
src/Middle/SymbolTable/: SymbolData.hs  SymbolMap.hs
src/Middle/Table/: Data.hs  Trie.hs  VarMap.hs
src/Middle/Table/Data/: Datatype.hs  Global.hs  Scoped.hs  Trait.hs
src/Middle/Typing/: Infer.hs  Inferable.hs  Inferable_.hs  Scheme.hs  Substitution.hs  TypeEnv.hs  Unification.hs
src/Parser/: Data.hs  Error.hs  Imports.hs  Lexer.x  Parser.y  Token.hs
src/SymbolTable/: Attrs.hs  SymbolData.hs  SymbolMap.hs  Trie.hs
src/Text/: Pretty.hs
src/Thorn/: Lexer.x  Parser.y  Project.hs  Token.hs
src/Typing/: Analyzer.hs  Constraint.hs  Infer.hs  Inferable.hs  Kind.hs  Primitives.hs  Scheme.hs  Solver.hs  Substitution.hs  Type.hs  TypeDecl.hs  TypeEnv.hs  Unification.hs
src/Utils/: FilePath.hs  List.hs  Path.hs  String.hs
stdlib/: thorn.build
stdlib/Std/: IO.th  Lib.th  Pretty.th
stdlib/Std/Data/: Bit.th  Compare.th  Default.th  String.th  Tree.th
stdlib/Std/Low/: Resource.th
