cabal-version: ${CABAL-VERSION}


-- package information
name:               ${NAME}
version:            0.1.0.0
synopsis:           ${SYNOPSIS}
description:        ${DESCRIPTION}
author:             ${AUTHOR}: ${EMAIL}
maintainer:         ${MAINTAINER}: ${EMAIL}
category:           ${CATEGORY}
license:            ${LICENSE-TYPE}
license-file:       ${LICENSE-PATH}
extra-source-files: ${README-PATH}

-- package information
build-type:         Simple



-- COMMONS
common extentions
    other-extensions:

common dependencies
    build-depends:
        base == 4.*
    default-language:
        Haskell2010

common hidden-modules
    other-modules:

common prog-options
    ghc-options:
        -Wall
        -Wextra
        -fhide-source-paths

common example-stuff
    import:
        dependencies
    build-depends:
        ${NAME}
    ghc-options:
        -Werror

common test-stuff
    import:
        dependencies,
        prog-options
    build-depends:
        ${NAME}
    ghc-options:
        -Werror



-- LIBRARY
source-repository head
    type:
        git
    location:
        https://github.com/${GITHUB-LOCATION}

library
    import:
        extensions,
        dependencies,
        prog-options
    exposed-modules:
    other-modules:
    ghc-options:
        -O3



-- EXAMPLES
executable ${EXAMPLE-NAME}
    import:
        example-stuff
    main-is:
        Examples/${EXAMPLE-NAME}.hs



-- TEST SUITES
test-suite ${TEST-NAME}
    import:
        test-stuff
    type:
        -- exitcode-stdio-1.0
        -- or
        -- detailed-0.9
    main-is:
        Tests/Combinators.hs
