cabal-version: 2.4

name:               rose-lang
version:            0.1.0.0
synopsis:           a new language written in haskell
author:             Rose Aetherius<roseaetherius@gmail.com>
maintainer:         Rose Aetherius<roseaetherius@gmail.com>
category:           Language
license:            MIT
license-file:       LICENSE
extra-source-files: README.md

build-type:         Simple


common general
    hs-source-dirs: src
    other-modules:
        Builder,
        Builder.CmdLine,
        Builder.CmdLine.Flags,
        Builder.CmdLine.Internal,
        Builder.CmdLine.Warnings,
        Builder.Internal,
        Builder.IO,
        Builder.Output,
        Builder.State,
        Common.Item,
        Common.SrcPos,
        Common.Typing,
        Common.Typing.Constraint,
        Common.Typing.Kind,
        Common.Typing.Type,
        Common.Var,
        Front.Parser,
        Front.Parser.Imports,
        Front.Parser.Data,
        Front.Parser.Lexer,
        Front.Parser.Parser,
        Front.Parser.Token,
        Middle.Analyzer,
        Middle.Analyzer.Internal,
        Middle.Analyzer.Checker,
        Middle.Analyzer.Error,
        Middle.Analyzer.State,
        Middle.Analyzer.Table,
        Middle.Table,
        Middle.Table.Data,
        Middle.Table.Data.Datatype,
        Middle.Table.Data.Global,
        Middle.Table.Data.Scoped,
        Middle.Table.Data.Trait,
        Middle.Table.Trie,
        Middle.Table.VarMap,
        Pretty,
        Threading,
        Utils.Paths,
        Utils.String

    build-tool-depends:
        alex:alex   >= 3.2,
        happy:happy >= 1.20
    build-depends:
        array       >= 0.5.3,
        base        >= 4.12,
        bytestring  >= 0.10.8,
        containers  >= 0.6,
        directory   >= 1.3.3,
        time        >= 1.8

    default-language:
        Haskell2010

    default-extensions:
        BangPatterns

    other-extensions:
        Rank2Types,
        FlexibleInstances,
        DefaultSignatures,
        TypeSynonymInstances

    ghc-options:
        -threaded
        -fhide-source-paths
        -Wall
        -Wextra
        -Wcompat
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wno-unused-do-bind
        -Werror


executable Rose
    import: general
    main-is: Main.hs
    ghc-options:
        -O2

executable Rose-Dev
    import: general
    main-is: Main.hs
    ghc-options:
        -O0
        -Wwarn=unused-imports
        -Wwarn=unused-top-binds

executable Rose-Profile
    import: general
    main-is: Main.hs
    ghc-options:
        -- -prof
        -fprof-auto
        -O2
        "-with-rtsopts=-N -p -s -h -i0.1"
