cabal-version: 2.4

name:               rose-lang
version:            0.1.0.0
synopsis:           a new language written in haskell
author:             Rose Aetherius<roseaetherius@gmail.com>
maintainer:         Rose Aetherius<roseaetherius@gmail.com>
category:           Language
license:            MIT
license-file:       LICENSE
extra-source-files: README.md

build-type:         Simple


common general
    hs-source-dirs: src
    other-modules:
        Analysis,
        Analysis.Error,
        AST,
        AST.Expr,
        AST.Literal,
        AST.Pattern,
        AST.Stmt,
        AST.Value,
        Builder,
        Builder.Internal,
        Builder.IO,
        Cmd,
        Cmd.Flags,
        Cmd.Warnings,
        Common.Module,
        Common.Specifiers,
        Common.SrcPos,
        Common.Var,
        Data.Table,
        Data.VarMap,
        Parser,
        Parser.Lexer,
        Parser.Parser,
        Parser.Token,
        Repl,
        Text.Pretty,
        Typing.Constraint,
        Typing.Infer,
        Typing.Inferable,
        Typing.Kind,
        Typing.Primitives,
        Typing.Scheme,
        Typing.Solver,
        Typing.Substitution,
        Typing.Type,
        Typing.TypeDecl,
        Utils.FilePath,
        Utils.List,
        Utils.String
        -- Utils.Path (WIP)

    build-tool-depends:
        alex:alex   >= 3.2,
        happy:happy >= 1.20
    build-depends:
        array        >= 0.5.3,
        base         >= 4.12,
        binary       >= 0.8.6,
        bytestring   >= 0.10.8,
        containers   >= 0.6,
        directory    >= 1.3.3,
        repline      >= 0.4.2,
        time         >= 1.8,
        transformers >= 0.5.6,

    default-language:
        Haskell2010
    default-extensions:
        BangPatterns
    other-extensions:
        Rank2Types,
        FlexibleInstances,
        DefaultSignatures,
        TypeSynonymInstances

    ghc-options:
        -threaded
        -fhide-source-paths
        -Wall
        -Wextra
        -Wcompat
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wno-unused-do-bind
        -Werror


executable Rose
    import: general
    main-is: Main.hs
    ghc-options:
        -O2

executable Rose-Dev
    import: general
    main-is: Main.hs
    ghc-options:
        -O0
        -Wwarn=unused-imports
        -Wwarn=unused-top-binds
